jsoup changelog

*** Release 1.2.3 [PENDING]
 * Now automatically detects the encoding character set when parsing HTML from a File or URL. The parser checks
   the content-type header, then the <meta http-equiv> or <meta charset> tag, and finally falls back to UTF-8.

 * Added support for the [^attributePrefix] selector query, to find elements with attributes starting with a prefix.
   Useful for finding elements with datasets: [^data-]

 * Added support for HTML5 dataset custom data attributes, with the Element.dataset() map.
 
 * Added full support for all new HTML5 tags.

 * Changed DT & DD tags to block-mode tags, to follow practice over spec
 
 * Improved implicit table element handling (particularly around thead, tbody, and tfoot).
 
 * Added support for namespaced elements (<fb:name>) and selectors (fb|name)
 
 * Added support for tag names with - and _ (<abc_foo>, <abc-foo>)

 * Handle tags with internal trailing space (<foo >)
 
 * Improved HTML output format for empty elements and auto-detected self closing tags

 * Implemented Node.ownerDocument DOM method

 * Fixed support for character class regular expressions in [attr=~regex] selector

*** Release 1.2.2 [2010-Jul-11]
 
 * Performance optimisation:
    - core HTML parser engine now 3.5 times faster
    - HTML generator now 2.5 times faster
    - much lower memory use and garbage collection time
    
 * Added support for :matches(regex) selector, to find elements containing text matching regular expression
 
 * Added support for [key~=regex] attribute selector, to find elements with attribute values matching regular expression

 * Upgraded the selector query parser to allow nested selectors like 'div:has(p:matches(regex))'

*** Release 1.2.1 [2010-Jun-21]
 * Added .before(html) and .after(html) methods to Element and Elements, to insert sibling HTML
 
 * Added :contains(text) selector, to search for elements containing the specified text

 * Added :has(selector) pseudo-selector